src/index/snapshots/writ__index__tests__parents_after_entry_1.snap
---
source: src/index/mod.rs
expression: actual

---
{
    "dir_1": {
        "dir_1/dir_2/second_level",
    },
    "dir_1/dir_2": {
        "dir_1/dir_2/second_level",
    },
}
